Feature/#432 upgrade spring boot 4 (#434)
* #432 Upgrade to Spring Boot 4

* #432 Upgrade to Spring Boot 4

* #432 Upgrade to Spring Boot 4

* #432 Upgrade to Spring Boot 4

* #432 Upgrade to Spring Boot 4

- prepare RC1

* #432 Upgrade to Spring Boot 4

- prepare RC2